--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     stages {
         stage('Git Checkout') {
             steps {
-                git clone 'https://github.com/Monish247/colorapp.git'
+                git 'https://github.com/Monish247/colorapp.git'
             }
         }
 
