--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -10,15 +10,16 @@ pipeline {
     stages {
         stage('Git Checkout') {
             steps {
-                git 'https://github.com/Monish247/colorapp.git'
+                git branch: 'main', url: 'https://github.com/Monish247/colorapp.git'
             }
-        } 
+        }
+
         stage('Build') {
             steps {
                 script {
                     // Restoring dependencies
                     //bat "cd ${DOTNET_CLI_HOME} && dotnet restore"
-                    
+
                     bat 'cd API-UI\\webapi\\ColorApi && dotnet restore'
                     bat "dotnet restore"
 
@@ -36,7 +37,6 @@ pipeline {
                 }
             }
         }
-
 
         stage('Publish') {
             steps {
