--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -20,7 +20,8 @@ pipeline {
                     // Restoring dependencies
                     //bat "cd ${DOTNET_CLI_HOME} && dotnet restore"
 
-                    bat 'cd API-UI\\webapi\\ColorApi && dotnet restore'
+                    bat 'cd API-UI\\webapi\\ColorApi'
+                    bat 'dir'
                     bat "dotnet restore"
 
                     // Building the application
