--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -35,6 +35,7 @@ pipeline {
                 script {
                     // Running tests
                    bat '''
+                       dir 
                        cd API-UI\\webapi\\ColorApi
                        dotnet build --configuration Release
                        cd \\bin\\Debug\\net9.0
