--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
                        dir 
                        cd API-UI\\webapi\\ColorApi
                        dotnet build --configuration Release
-                       cd \\bin\\Debug\\net9.0
+                       cd .\\bin\\Debug\\net9.0
                        echo "show .dll in curent directory"
                        dir *.dll
                     '''
