--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -36,6 +36,8 @@ pipeline {
                     // Running tests
                    bat '''
                        dir 
+                       cd API-UI\\webapi\\ColorApi
+                       dirs
                        dotnet build --configuration Release
                        cd .\\bin\\Debug\\net9.0
                        echo "show .dll in curent directory"
