--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                    bat '''
                        dir 
                        cd API-UI\\webapi\\ColorApi
-                       dirs
+                       dir
                        dotnet build --configuration Release
                        cd .\\bin\\Debug\\net9.0
                        echo "show .dll in curent directory"
