--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -50,6 +50,7 @@ pipeline {
         stage('Publish') {
             steps {
                 bat 'dir'
+                bat 'cd API-UI\\webapi\\ColorApi'
                 bat 'dotnet publish -c Release -o ./publish'
                 archiveArtifacts artifacts: 'publish/**', fingerprint: true
             }
