--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -13,7 +13,6 @@ pipeline {
                 git branch: 'main', url: 'https://github.com/Monish247/colorapp.git'
             }
         }
-
         stage('installing dependencies') {
             steps {
                 script {
@@ -29,7 +28,6 @@ pipeline {
                 }
             }
         }
-
         stage('build') {
             steps {
                 script {
@@ -46,20 +44,20 @@ pipeline {
                 }
             }
         }
-
         stage('Publish') {
             steps {
-                bat '''
-                   echo ""
-                   dir
-                   cd API-UI\\webapi\\ColorApi
-                   dir
-                   dotnet publish -c Release -o ./publish
-                   archiveArtifacts artifacts: 'publish/**', fingerprint: true
-                '''
-            }
+                script{
+                    bat '''
+                        echo "checking directory"
+                        dir
+                        cd API-UI\\webapi\\ColorApi
+                        dir
+                        dotnet publish -c Release --property:PublishDir=./publish
+                    '''
+                        archiveArtifacts artifacts: 'publish/**', fingerprint: true
+                }
+            }   
         }
-
         stage('Docker Build') {
             steps {
                 script {
@@ -67,7 +65,6 @@ pipeline {
                 }
             }
         }
-
         stage('Docker Push') {
             steps {
                 script {
