--- a/API-UI/webapi/ColorApi/Jenkinsfile
+++ b/API-UI/webapi/ColorApi/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
                         cd API-UI\\webapi\\ColorApi
                         dir
                         dotnet publish -c Release --property:PublishDir=./publish
-                        dir
+                        dir publish
                     '''
                         archiveArtifacts artifacts: 'publish/**', fingerprint: true
                 }
